--- a/src/static/css/custom.css
+++ b/src/static/css/custom.css
@@ -23,7 +23,7 @@ form input{
 form input[type="submit"]{
 	margin-right: auto;
 	margin-left: auto;
-	background-color: #42a5f5;
+	background-color: #09af53;
 	border: hidden;
 	border-radius: 4px;
 	width: 100%;
